--- a/App/css/footer.styl
+++ b/App/css/footer.styl
@@ -43,5 +43,8 @@ footer
         color darken($secondary-blue, 30%)
         cursor pointer
 
+        a
+          color inherit
+
         &:hover
           color $hover
