emberified team and banners

--- a/App/css/page.styl
+++ b/App/css/page.styl
@@ -48,6 +48,10 @@ body
       color $secondary-blue
       padding 20px
 
+    &.caption
+      color #b7bcbf
+      text-align center
+
   .drop
     &:first-letter
       float left
