--- a/App/css/banner.css
+++ b/App/css/banner.css
@@ -3,6 +3,8 @@
   float: left;
   display: inline-block;
   width: 100%;
+  max-height: 600px;
+  overflow: hidden;
 }
 .banner img {
   width: 100%;
@@ -20,4 +22,7 @@
   text-align: center;
   font-size: 4em;
   text-shadow: 0 0 80px rgba(0,0,0,0.5);
+}
+.banner.team img {
+  margin-top: -110px;
 }
