--- a/App/css/banner.styl
+++ b/App/css/banner.styl
@@ -5,6 +5,8 @@
     float left
     display inline-block
     width 100%
+    max-height 600px
+    overflow hidden
 
     img
         width 100%
@@ -22,3 +24,7 @@
         text-align center
         font-size 4em
         text-shadow 0 0 80px rgba(0,0,0,0.5)
+
+    &.team
+        img
+            margin-top -110px
