--- a/App/css/page.css
+++ b/App/css/page.css
@@ -47,6 +47,10 @@ body {
   color: #b7bcbf;
   padding: 20px;
 }
+.page p.caption {
+  color: #b7bcbf;
+  text-align: center;
+}
 .page .drop:first-letter {
   float: left;
   color: #ffc328;
