google map, fixtures, other candies

--- a/App/css/team.css
+++ b/App/css/team.css
@@ -1,6 +1,9 @@
 .team {
   display: inline-block;
 }
+.team h1:first-letter {
+  font-size: 2.6em !important;
+}
 .team ul {
   padding: 0;
   margin: 0;
