--- a/App/css/banner.css
+++ b/App/css/banner.css
@@ -5,6 +5,7 @@
   width: 100%;
   max-height: 600px;
   overflow: hidden;
+  margin-bottom: 50px;
 }
 .banner img {
   width: 100%;
@@ -25,4 +26,8 @@
 }
 .banner.team img {
   margin-top: -110px;
+}
+.banner .map-canvas {
+  width: 100%;
+  height: 600px;
 }
