--- a/App/css/banner.styl
+++ b/App/css/banner.styl
@@ -7,6 +7,7 @@
     width 100%
     max-height 600px
     overflow hidden
+    margin-bottom 50px
 
     img
         width 100%
@@ -28,3 +29,7 @@
     &.team
         img
             margin-top -110px
+
+    .map-canvas
+        width 100%
+        height 600px
