--- a/App/css/landingPage.css
+++ b/App/css/landingPage.css
@@ -15,8 +15,9 @@
   text-decoration: none;
   font-size: 29px;
   margin-top: 75px;
+  display: inline-block;
 }
-.weeklytongue a:hover {
+.weeklytongue a:hover p {
   color: #ffc328;
 }
 .weeklytongue aside {
@@ -46,21 +47,15 @@
   text-align: center;
   font-size: 1.8em;
 }
-.information {
-  margin: 60px 0;
-}
 .information h1 {
   margin: 0 0 50px 0;
+  text-align: center;
 }
 .information a p {
-  font-size: 1em;
   color: #b7bcbf;
   width: 100%;
   text-align: center;
 }
-.information a p:hover {
+.information a:hover p {
   color: #ffc328;
-}
-.information p {
-  font-size: 1.2em;
 }
