--- a/App/css/landingPage.styl
+++ b/App/css/landingPage.styl
@@ -16,9 +16,11 @@
         text-decoration none
         font-size 29px
         margin-top 75px
+        display inline-block
 
         &:hover
-            color $hover
+            p
+                color $hover
 
     aside
         float right
@@ -48,19 +50,21 @@
         font-size 1.8em
 
 .information
-    margin 60px 0
+    // margin 60px 0
     h1
         margin 0 0 50px 0
+        text-align center
 
     a
         p
-            font-size 1em
+            // font-size 1em
             color $secondary-blue
             width 100%
             text-align center
 
-            &:hover
+        &:hover
+            p
                 color $hover
 
     p
-        font-size 1.2em
+        // font-size 1.2em
