--- a/css/banner.styl
+++ b/css/banner.styl
@@ -5,7 +5,7 @@
     float left
     display inline-block
     width 100%
-    max-height 600px
+    // max-height 600px
     overflow hidden
     margin-bottom 50px
 
