--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -48,14 +48,37 @@
   font-size: 1.8em;
 }
 .information h1 {
-  margin: 0 0 50px 0;
+  margin: 0 auto 50px auto;
   text-align: center;
+}
+.information a {
+  display: inline-block;
+}
+.information a:hover .triangle {
+  border-color: transparent transparent transparent #ffc328;
+}
+.information a .triangle {
+  position: relative;
+  z-index: 2;
+  top: -260px;
+  width: 0;
+  margin: auto;
+  right: -50%;
+  margin: -27px;
+  height: 0;
+  border-style: solid;
+  border-width: 32.5px 0 32.5px 56.3px;
+  border-color: transparent transparent transparent #fff;
 }
 .information a p {
   color: #b7bcbf;
   width: 100%;
   text-align: center;
+  display: block;
 }
 .information a:hover p {
   color: #ffc328;
+}
+.information p {
+  display: block;
 }
