brute force workaround to stylus @import issue

--- a/css/footer.styl
+++ b/css/footer.styl
@@ -1,9 +1,14 @@
-@import 'vars'
+// @import 'vars'
+$blue = #11242f
+$secondary-blue = #B7BCBF
+$hover = #FFC328
+$transition-time = 0.2s
+$radius = 2px
 
 footer
   background-color $blue
   font-family 'Open Sans', sans-serif
-  display inline-block
+  display table-row
   width 100%
   line-height 1.4em
   padding 20px
