--- a/css/page.styl
+++ b/css/page.styl
@@ -1,10 +1,15 @@
-@import 'vars'
+// @import 'vars'
+$blue = #11242f
+$secondary-blue = #B7BCBF
+$hover = #FFC328
+$transition-time = 0.2s
+$radius = 2px
 
 *
   box-sizing border-box
   font-weight 100
   color $blue
-  transition all ease-in-out .15s
+  transition all ease-in-out $transition-time
 
 a
   text-decoration none
