--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 footer {
   background-color: #11242f;
   font-family: 'Open Sans', sans-serif;
-  display: inline-block;
+  display: table-row;
   width: 100%;
   line-height: 1.4em;
   padding: 20px;
