--- a/css/about.styl
+++ b/css/about.styl
@@ -1,9 +1,9 @@
-// @import 'vars'
-$blue = #11242f
-$secondary-blue = #B7BCBF
-$hover = #FFC328
-$transition-time = 0.2s
-$radius = 2px
+@import 'vars'
+// $blue = #11242f
+// $secondary-blue = #B7BCBF
+// $hover = #FFC328
+// $transition-time = 0.2s
+// $radius = 2px
 
 .about
     .logo
