--- a/css/stylus/nav.styl
+++ b/css/stylus/nav.styl
@@ -41,6 +41,9 @@ nav
       &:hover
         color $hover
 
+      &.active
+        color $secondary-blue
+
 .subheader
   font-family 'Open Sans', sans-serif
   display inline-block
