--- a/css/stylus/forms.styl
+++ b/css/stylus/forms.styl
@@ -3,7 +3,7 @@
   h1
     margin-top 0
 
-  input, textarea
+  input, textarea, label
     font-size 0.8em
     font-family 'Lora', serif
     display inline-block
@@ -27,7 +27,16 @@
     li
       margin-bottom 5px
 
+      label
+        color #A9A9A9
+
+        input
+          float left
+          width initial
+          margin 5px 0.5em 0 0
+
   textarea
+    float left
     margin-bottom 5px
 
   .submit
@@ -36,3 +45,4 @@
     font-size 1.3em
     padding 1em
     cursor pointer
+    text-align center
