--- a/css/stylus/landingPage.styl
+++ b/css/stylus/landingPage.styl
@@ -1,52 +1,3 @@
-.weeklytongue
-    background-color #fff
-    padding 80px 20px
-    width 100%
-    margin auto
-    max-width 960px
-
-    a, aside
-        width 20%
-        color $secondary-blue
-        float left
-
-    a
-        text-decoration none
-        font-size 29px
-        margin-top 75px
-        display inline-block
-
-        &:hover
-            p
-                color $hover
-
-    aside
-        float right
-        margin-top 83px
-
-    h1
-        width 60%
-        float left
-        text-align center
-        font-weight 700
-        font-size 3em
-
-    img
-        width inherit
-        margin-bottom 40px
-
-    p
-        max-width 800px
-        margin 20px auto
-        font-size 1.2em
-        line-height 1.5em
-        letter-spacing 0.4px
-
-    span
-        display block
-        text-align center
-        font-size 1.8em
-
 .information
     h1
         margin 0 auto 50px auto
@@ -64,7 +15,6 @@
             z-index 2
             top -260px
             width 0
-            // width 0
             margin auto
             right -50%
             margin -27px
@@ -74,7 +24,6 @@
             border-color transparent transparent transparent #fff
 
         p
-            // font-size 1em
             color $secondary-blue
             width 100%
             text-align center
@@ -86,5 +35,22 @@
 
     p
         display block
-        // font-size 1.2em
 
+.activities
+    ul
+        width 100%
+        display inline-block
+        list-style-type none
+        padding 0
+        margin 0
+
+        li
+            display inline-block
+            box-sizing border-box
+            width 33%
+            padding .5em
+            float left
+
+            img
+                height 100%
+                width 100%
