--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -43,7 +43,7 @@ body
     width 100%
 
   p
-    display inline-block
+    // display inline-block
     max-width 800px
     margin 20px auto
     line-height 1.8em
