--- a/css/stylus/forms.styl
+++ b/css/stylus/forms.styl
@@ -3,6 +3,10 @@
   h1
     margin-top 0
 
+  p
+    float left
+    // clear both
+
   input, textarea, label
     font-size 0.8em
     font-family 'Lora', serif
@@ -21,11 +25,16 @@
       border 1px solid lighten($secondary-blue, 88%)
 
   ul
+    width 100%
+    display inline-block
     padding 0
     list-style-type none
 
     li
+      display inline-block
+      width 100%
       margin-bottom 5px
+      float left
 
       label
         color #A9A9A9
@@ -37,7 +46,6 @@
 
   textarea
     float left
-    margin-bottom 5px
 
   .submit
     background #fff
