made subnavs into components, further tweaks. Activities style

--- a/css/stylus/landingPage.styl
+++ b/css/stylus/landingPage.styl
@@ -1,9 +1,9 @@
-.information
+.index
     h1
         margin 0 auto 50px auto
         text-align center
 
-    a
+    .youTubeLink
         display inline-block
 
         &:hover
@@ -35,22 +35,3 @@
 
     p
         display block
-
-.activities
-    ul
-        width 100%
-        display inline-block
-        list-style-type none
-        padding 0
-        margin 0
-
-        li
-            display inline-block
-            box-sizing border-box
-            width 33%
-            padding .5em
-            float left
-
-            img
-                height 100%
-                width 100%
