--- a/css/stylus/forms.styl
+++ b/css/stylus/forms.styl
@@ -1,4 +1,5 @@
 .form
+  padding-bottom 10em !important
 
   h1
     margin-top 0
@@ -38,6 +39,7 @@
 
       label
         color #A9A9A9
+        cursor pointer
 
         input
           float left
