--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -95,3 +95,31 @@ body
     &:hover
       color $hover
 
+  .activities
+    width 100%
+    display inline-block
+    list-style-type none
+    padding 0
+    margin 0
+
+    li
+        display inline-block
+        box-sizing border-box
+        width 33%
+        padding .5em
+        float left
+
+        a
+          display inline-block
+          width 100%
+          p
+            text-align center
+            color $secondary-blue
+
+          &:hover
+            p
+              color $hover
+
+        img
+            height 100%
+            width 100%
