--- a/css/stylus/team.styl
+++ b/css/stylus/team.styl
@@ -11,9 +11,14 @@
     list-style-type none
 
     li
-      display inline-block
+      display inline-table
       width 32.8%
       margin 30px 0
+
+      &.volunteer
+        p
+          margin 0
+          text-align center
 
       img
         padding 5px
