--- a/css/stylus/forms.styl
+++ b/css/stylus/forms.styl
@@ -5,7 +5,7 @@
     float left
     // clear both
 
-  input, textarea, label
+  input, textarea, label, button
     font-size 0.8em
     font-family 'Lora', serif
     display inline-block
@@ -53,3 +53,5 @@
     padding 1em
     cursor pointer
     text-align center
+    background lighten($blue, 95%)
+    border 1px solid lighten($blue, 92%)
