--- a/templates/submit.handlebars
+++ b/templates/submit.handlebars
@@ -6,23 +6,23 @@
     {{#link-to "submitGuidelines" classNames="secondaryLink"}}Video Guidelines{{/link-to}}
     <ul>
       <li><p>About you</p></li>
-      <li><input type="text" id="name" name="name" placeholder="Name (Required)"></li>
-      <li><input type="text" id="email" name="email" placeholder="Email (Required)"></li>
-      <li><input type="text" id="link" name="link" placeholder="Link to Video File (Dropbox, Google Drive, Mediafire) (Required)"></li>
+      <li>{{input value=view.name placeholder="Name (Required)" required=1}}</li>
+      <li>{{input value=view.email placeholder="Email (Required)" required=1}}</li>
+      <li>{{input value=view.link placeholder="Link to Video File (Dropbox, Google Drive, Mediafire) (Required)" required=1}}</li>
     </ul>
     <ul>
       <li><p>About the speaker</p></li>
-      <li><input type="text" id="speaker" name="speaker" placeholder="What is the speaker's name? (Required)"></li>
-      <li><input type="text" id="language" name="language" placeholder="What languages are used in this video? (Required)"></li>
+      <li>{{input value=view.speaker placeholder="What is the speaker's name? (Required)" required=1}}</li>
+      <li>{{input value=view.language placeholder="What languages are used in this video? (Required)" required=1}}</li>
     </ul>
     <ul>
       <li><p>About the video</p></li>
-      <li><input type="text" id="videoLocation" name="videoLocation" placeholder="Where was this video made? (Required)"></li>
-      <li><textarea name="transcription" id="transcription" class="optional" placeholder="Transcribe the video (optional)"></textarea></li>
-      <li><textarea name="translation" id="translation" class="optional" placeholder="Translate the video (optional)"></textarea></li>
+      <li>{{input value=view.videoLocation placeholder="Where was this video made? (Required)" required=1}}</li>
+      <li>{{textarea value=view.transcription placeholder="Transcribe the video (optional)"}}</li>
+      <li>{{textarea value=view.translation placeholder="Translate the video (optional)"}}</li>
     </ul>
     <p>Leave us a message</p>
-    <textarea name="message" id="message" class="optional" placeholder="Message (optional)"></textarea>
+    {{textarea value=view.message placeholder="Message (optional)"}}
     <ul>
       <li><p>Release form</p></li>
       <li>
@@ -30,6 +30,6 @@
       </li>
       <li><label for="releaseForm"><input type="checkbox" id="releaseForm" name="check_list[]" value="releaseForm">I have read and accept the release form (Required)</label></li>
     </ul>
-    <input type="submit" id="submit" class="submit" value="Send">
+    <button class="submit" type="submit" {{action "submit" target=view}}>Send</button>
   </form>
 </section>
