contact forms, guidelines and additional pages

--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -37,6 +37,7 @@ body
   max-width 960px
   margin auto
   padding 30px
+  padding-bottom 5em
   clear both
 
   h1
@@ -125,3 +126,4 @@ body
         img
             height 100%
             width 100%
+            border-radius 100%
