--- a/templates/get_involved.handlebars
+++ b/templates/get_involved.handlebars
@@ -4,19 +4,19 @@
     <ul class="activities">
       <li>
         {{#link-to "submit" classNames="subheaderLink"}}
-          <img src="#" alt="Submit a video">
+          {{!-- <img src="img/1.png" alt="Submit a video"> --}}
           <p>Submit a video</p>
         {{/link-to}}
       </li>
       <li>
         {{#link-to "volunteer" classNames="subheaderLink"}}
-          <img src="#" alt="Volunteer">
+          {{!-- <img src="img/2.png" alt="Volunteer"> --}}
           <p>Volunteer</p>
         {{/link-to}}
       </li>
       <li>
         {{#link-to "contact" classNames="subheaderLink"}}
-          <img src="#" alt="Contact">
+          {{!-- <img src="img/3.png" alt="Contact"> --}}
           <p>Contact</p>
         {{/link-to}}
       </li>
