--- a/templates/team.handlebars
+++ b/templates/team.handlebars
@@ -5,7 +5,7 @@
 {{about-subheader}}
 <section class="page">
     <div class="team">
-        <h1 class="drop">Our team is composed of volunteers from all over the world</h1>
+        <h1 class="drop">We're a team of volunteers from all over the world</h1>
         <ul>
             {{#each}}
                 <li>
@@ -16,7 +16,7 @@
             {{/each}}
             <li class="volunteer">
               {{#link-to "volunteer"}}
-                <img src="#" alt="Become a volunteer today">
+                <img src="img/2.png" alt="Become a volunteer today">
                 <p>Become a volunteer today</p>
               {{/link-to}}
             </li>
