--- a/templates/application.handlebars
+++ b/templates/application.handlebars
@@ -33,8 +33,8 @@
               {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
               {{!-- {{#link-to "mission" classNames="footerLink" tagName="li"}}Mission{{/link-to}} --}}
               {{!-- {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}} --}}
-              {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}}
-              {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}}
+              {{!-- {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}} --}}
+              {{!-- {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}} --}}
               {{#link-to "legal" classNames="footerLink" tagName="li"}}Legal{{/link-to}}
           </ul>
           <ul>
