--- a/templates/contact.handlebars
+++ b/templates/contact.handlebars
@@ -5,10 +5,10 @@
     <h1>Contact</h1>
     <p>We're always eager to hear from you</p>
     <ul>
-      <li><input type="text" id="name" name="name" placeholder="Name (Required)"></li>
-      <li><input type="text" id="email" name="email" placeholder="Email (Required)"></li>
+      <li>{{input title="Name" required="true" value=view.name placeholder="Name (Required)"}}</li>
+      <li>{{input title="Email"required="true" type="email" value=view.email placeholder="Email (Required)"}}</li>
     </ul>
-    <textarea name="message" id="message" placeholder="Message"></textarea>
-    <input type="submit" id="submit"  class="submit" value="Send">
+    {{textarea title="Message"value=view.message placeholder="Message (optional)"}}
+    <button class="submit" type="submit" {{action "submit" target=view}}>Send</button>
   </form>
 </section>
