--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -12,25 +12,24 @@
             <p>Join us on YouTube</p>
         </a>
         <br>
-        <p>We are a group of motely motherfuckers who go out of our way to listen (and party with) to those around us. Our mission is to record every language in the world.</p>
-        {{#link-to "about" classNames="link" tagName="p"}}Learn more here...{{/link-to}}
+        <p>Wikitongues is a global effort to record and provide access to every language in the world. We’re a network of volunteers on every continent who work to bring you new language videos every week, driven by a commitment to the value of diversity. Be a part of our movement.</p>
         <ul class="activities">
           <li>
             {{#link-to "submit" classNames="subheaderLink"}}
-              <img src="#" alt="User submissions">
-              <p>User submissions</p>
+              {{!-- <img src="img/1.png" alt="User submissions"> --}}
+              <p>Submit a video</p>
             {{/link-to}}
           </li>
           <li>
             {{#link-to "volunteer" classNames="subheaderLink"}}
-              <img src="#" alt="Ambassadors">
-              <p>Ambassadors</p>
+              {{!-- <img src="img/2.png" alt="Ambassadors"> --}}
+              <p>Become an ambassador</p>
             {{/link-to}}
           </li>
           <li>
             {{#link-to "team" classNames="subheaderLink"}}
-              <img src="#" alt="Community">
-              <p>Community</p>
+              {{!-- <img src="img/3.png" alt="Community"> --}}
+              <p>Join our community</p>
             {{/link-to}}
           </li>
         </ul>
