--- a/templates/submit.handlebars
+++ b/templates/submit.handlebars
@@ -3,7 +3,9 @@
   <form action="">
     <h1>Submit a video</h1>
     <p>Support the Wikitongues community by submiting a video of your own.</p>
-    {{#link-to "submitGuidelines" classNames="secondaryLink"}}Video Guidelines{{/link-to}}
+    <a class="secondaryLink" {{action "openGuidelines"}}>Video Guidelines</a>
+    {{!-- {{#link-to "submitGuidelines" classNames="secondaryLink"}}Video Guidelines{{/link-to}} --}}
+    {{submit-guidelines}}
     <ul>
       <li><p>About you</p></li>
       <li>{{input value=view.name placeholder="Name (Required)" required=1}}</li>
@@ -26,9 +28,11 @@
     <ul>
       <li><p>Release form</p></li>
       <li>
-        {{#link-to "legal" classNames="secondaryLink"}}Read Release Form{{/link-to}}
+        {{!-- {{#link-to "legal" classNames="secondaryLink"}}Read Release Form{{/link-to}} --}}
+        <a class="secondaryLink" {{action "openTOS"}}>Read Release Form</a>
+        {{release-forms}}
       </li>
-      <li><label for="releaseForm"><input type="checkbox" id="releaseForm" name="check_list[]" value="releaseForm">I have read and accept the release form (Required)</label></li>
+      <li class="checkbox">{{input type="checkbox" id="releaseForm" checked=view.releaseForm}}<label for="releaseForm">I have read and accept the release form (Required)</label></li>
     </ul>
     <button class="submit" type="submit" {{action "submit" target=view}}>Send</button>
   </form>
