--- a/templates/volunteer.handlebars
+++ b/templates/volunteer.handlebars
@@ -1,21 +1,23 @@
 {{get-involved-subheader}}
 <section class="page form">
-  <form action="">
+  <form>
     <h1>Become a volunteer</h1>
     <p>Apply to join our community as a volunteer or ambassador</p>
-    {{#link-to "volunteerGuidelines" classNames="secondaryLink"}}Volunteering Guidelines{{/link-to}}
+    <a class="secondaryLink" {{action "openGuidelines"}}>Volunteer Guidelines</a>
+    {{!-- {{#link-to "volunteerGuidelines" classNames="secondaryLink"}}Volunteering Guidelines{{/link-to}} --}}
+    {{volunteer-guidelines}}
     <ul>
       <li><p>About you</p></li>
-      <li>{{input value=view.name placeholder="Name (Required)" required=1}}</li>
-      <li>{{input value=view.email placeholder="Email (Required)" required=1}}</li>
-      <li>{{input value=view.location placeholder="Location (Required)" required=1}}</li>
+      <li>{{input required="true" value=view.name placeholder="Name (Required)"}}</li>
+      <li>{{input required="true" type="email" value=view.email placeholder="Email (Required)"}}</li>
+      <li>{{input required="true" value=view.location placeholder="Location (Required)"}}</li>
     </ul>
     <ul>
       <li><p>How would you like to contribute?</p></li>
-      <li><label for="ambassador">{{input type="checkbox" checked=view.ambassador}}Language Recording</label></li>
-      <li><label for="socialMedia">{{input type="checkbox" checked=view.socialMedia}}Social Media</label></li>
-      <li><label for="webDev">{{input type="checkbox" checked=view.webDev}}Web Development</label></li>
-      <li>{{input value=view.otherVolunteer placeholder="Other (Please specify)" required=1}}</li>
+      <li class="checkbox">{{input type="checkbox" id="ambassador" checked=view.ambassador}}<label for="ambassador">Language Recording</label></li>
+      <li class="checkbox">{{input type="checkbox" id="socialMedia" checked=view.socialMedia}}<label for="socialMedia">Social Media</label></li>
+      <li class="checkbox">{{input type="checkbox" id="webDev" checked=view.webDev}}<label for="webDev">Web Development</label></li>
+      <li>{{input value=view.otherVolunteer placeholder="Other (Please specify)"}}</li>
     </ul>
     <p>Please tell us a bit about yourself</p>
     {{textarea value=view.message placeholder="What do you do?"}}
