team page map, minor form tweaks

--- a/css/stylus/banner.styl
+++ b/css/stylus/banner.styl
@@ -6,6 +6,16 @@
     // max-height 500px
     overflow hidden
 
+    &.team
+        .map
+            height 600px// img
+            width 100%
+            background-image url("../img/map.jpg")
+            background-size cover
+            background-position-x 50%
+            // height 200%
+            // width 200%
+
     img
         width 100%
         float left
@@ -25,7 +35,7 @@
 
     &.team
         img
-            margin-top -110px
+            // margin-top -110px
 
     .map-canvas
         width 100%
