--- a/templates/contact.handlebars
+++ b/templates/contact.handlebars
@@ -10,6 +10,6 @@
     </ul>
     {{textarea title="Message"value=view.message placeholder="Message (optional)"}}
     <button class="submit" type="submit" {{action "submit" target=view}}>Send</button>
-    <h6>Alternatively, you can always reach us at hello@wikitongues.org</h6>
+    <p class="alt-email">Alternatively, you can always reach us at hello@wikitongues.org</p>
   </form>
 </section>
