--- a/css/stylus/forms.styl
+++ b/css/stylus/forms.styl
@@ -73,3 +73,10 @@
     &:hover
       background lighten($blue, 90%)
       border 1px solid lighten($blue, 89%)
+
+  .alt-email
+    font-size .8em
+    color $secondary-blue
+    text-align center
+    margin 3em 0
+    max-width 100%
