typographic revisions + new mission  banner img

--- a/css/stylus/banner.styl
+++ b/css/stylus/banner.styl
@@ -3,7 +3,7 @@
     float left
     display inline-block
     width 100%
-    // max-height 500px
+    max-height 550px
     overflow hidden
 
     &.team
@@ -19,6 +19,9 @@
     img
         width 100%
         float left
+        
+        &#mission
+            margin-top -230px
 
     h1
         position absolute
