--- a/css/stylus/forms.styl
+++ b/css/stylus/forms.styl
@@ -1,5 +1,12 @@
 .form
   padding-bottom 10em !important
+  
+  .contact-form
+    
+    input
+      
+      &:first-child
+        margin-bottom 6px
 
   p
     float left
