--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -11,6 +11,7 @@ b
 a
   text-decoration none
   color $blue
+  font-weight 700
 
   &:hover
     color $hover
@@ -77,6 +78,13 @@ body
 
       &:hover
         color $hover
+
+  .excerpt
+    margin 9px 0 100px 0
+    
+    p
+      padding 0 100px
+      font-style italic
 
   .drop
     &:first-letter
