--- a/templates/team.handlebars
+++ b/templates/team.handlebars
@@ -7,7 +7,7 @@
 {{about-subheader}}
 <section class="page">
     <div class="team">
-        <h1 class="drop">We're a team of volunteers from all over the world</h1>
+        <h1>We're from around the world</h1>
         <ul>
             {{#each}}
                 <li>
