--- a/css/stylus/guidelines.styl
+++ b/css/stylus/guidelines.styl
@@ -40,3 +40,12 @@
       display list-item
       margin 1em 0
       line-height 1.8em
+  
+  td
+    width 25%
+    padding 20px 40px
+    border 1px solid
+    text-align center
+    
+    &.label
+      font-weight 800
