--- a/css/stylus/nav.styl
+++ b/css/stylus/nav.styl
@@ -33,16 +33,26 @@ nav
       list-style-type none
       float left
       display inline-block
-      padding 16px
+      padding 16px 16px 17px 16px
       color inherit
       text-decoration none
       cursor pointer
+      color $secondary-blue !important
+      text-transform uppercase
+      letter-spacing .05em
 
       &:hover
-        color $hover
+        color $hover !important
 
       &.active
-        color $secondary-blue
+        color $blue !important
+      
+      &.donate
+        background $hover
+
+        a
+          color white
+          font-weight 100
 
 .subheader
   font-family 'Open Sans', sans-serif
@@ -60,10 +70,11 @@ nav
     li
       display inline-block
       padding 2em 16px
+      color $secondary-blue !important
 
       &.active
-        color $secondary-blue
+        color $blue !important
 
       &:hover
-        color $hover
+        color $hover !important
         cursor pointer
