--- a/templates/components/submit-guidelines.handlebars
+++ b/templates/components/submit-guidelines.handlebars
@@ -16,6 +16,34 @@
             <h4>Format</h4>
             <p>Wikitongues accepts videos of any level of technical quality. If you have access to a webcam or a smartphone, great! If you have access to professional audiovisual equipment, even better. For comparative production quality guidelines, see the table below.</p>
         </li>
+        <li>
+            <table>
+                <tr>
+                    <td class="label">Technical Quality</td>
+                    <td class="label">Video</td>
+                    <td class="label">Audio</td>
+                    <td class="label">File Format</td>
+                </tr>
+                <tr>
+                    <td class="label">1st Tier</td>
+                    <td>DSLR Camera</td>
+                    <td>Field recorder, preferably with lav mic and windscreen</td>
+                    <td>H.264</td>
+                </tr>
+                <tr>
+                    <td class="label">2nd Tier</td>
+                    <td>Tablet or smartphone camera</td>
+                    <td>iTalk for iOS, Audio Recorder for Android, or comparable app</td>
+                    <td>H.264 or MPEG-4</td>
+                </tr>
+                <tr>
+                    <td class="label">3rd Tier</td>
+                    <td>Webcam</td>
+                    <td>Native audio</td>
+                    <td>MPEG-4, .mov, et. al</td>
+                </tr>
+            </table>
+        </li>
     </ul>
   </section>
 </div>
