--- a/templates/components/volunteer-guidelines.handlebars
+++ b/templates/components/volunteer-guidelines.handlebars
@@ -14,7 +14,7 @@
         </li>
         <li>
           Joining our web dev team
-          <p>Though Wikitongues exists primarily on social networks, we are working on various new ways </p>
+          <p>Though our outlet is currently social media, we are working on new and better ways to show you every language in the world, and make it easier for anyone to contribute. If you have experience in UX/UI or development, we could use your help in the completion of a web and mobile app, slated for release in 2015.</p>
         </li>
       </ol>
   </section>
