--- a/templates/get_involved.handlebars
+++ b/templates/get_involved.handlebars
@@ -1,6 +1,6 @@
 <section class="page form">
     <h1>Get involved</h1>
-    <p>Wikitongues wouldn't be anywhere without our community. There are so many ways you can help out, or send us a message if you'd just like to reach out!</p>
+    <p>Wikitongues wouldn't be anywhere without our community of volunteers. If you believe in what we're doing, there's plenty of ways to get involved.</p>
     <ul class="activities">
       <li>
         {{#link-to "submit" classNames="subheaderLink"}}
