--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -23,15 +23,15 @@
           <li>
             {{#link-to "volunteer" classNames="subheaderLink"}}
               {{!-- <img src="img/2.png" alt="Ambassadors"> --}}
-              <p>Become an ambassador</p>
+              <p>Become a volunteer</p>
             {{/link-to}}
           </li>
           <li>
-            {{#link-to "team" classNames="subheaderLink"}}
+            <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" classNames="subheaderLink" target="_blank">
               {{!-- <img src="img/3.png" alt="Community"> --}}
-              <p>Join our community</p>
-            {{/link-to}}
-          </li>
+              <p>Donate</p>
+            </a>
+          </a>
         </ul>
         {{!-- <p>Join us in discovering every single language in the world!</p> --}}
     </div>
