--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -111,25 +111,30 @@ body
     display inline-block
     list-style-type none
     padding 0
-    margin 0
+    margin 45px 0 0
 
     li
         display inline-block
         box-sizing border-box
-        width 33%
-        padding .5em
+        width 32%
+        margin 0 .5%
         float left
+        background #EFF5F9
+        border 1px solid #E5EFF6
+        
+        &:first-child
+          margin-left 0
+
+        &:hover
+          background lighten($blue, 90%)
+          border 1px solid lighten($blue, 89%)
 
         a
           display inline-block
           width 100%
           p
             text-align center
-            color $secondary-blue
-
-          &:hover
-            p
-              color $hover
+            color $blue
 
         img
             height 100%
