background-image banners

--- a/css/stylus/banner.styl
+++ b/css/stylus/banner.styl
@@ -3,23 +3,29 @@
     float left
     display inline-block
     width 100%
+    height 550px
     max-height 550px
     overflow hidden
 
     &.team
-        .map
-            height 600px// img
-            width 100%
-            background-image url("../img/map.jpg")
-            background-size cover
-            background-position-x 50%
+        // .map
+            // height 600px// img
+            // width 100%
+        background-image url("../img/map.jpg")
+        background-size cover
+        background-position-x 50%
             // height 200%
             // width 200%
+
+    &.mission
+        background-image url("../img/banner-vanuatu.jpg")
+        background-size cover
+        background-position-y 50%
 
     img
         width 100%
         float left
-        
+
         &#mission
             margin-top -230px
 
