--- a/templates/mission.handlebars
+++ b/templates/mission.handlebars
@@ -1,6 +1,6 @@
 {{#each}}
-  <section class="banner">
-      <img {{bind-attr src="image"}} alt="Wikitongues" id="mission" class="fallback">
+  <section class="banner mission">
+      {{!-- <img {{bind-attr src="image"}} alt="Wikitongues" id="mission" class="fallback"> --}}
       <h1>{{text}}</h1>
   </section>
 {{/each}}
