--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -129,8 +129,9 @@ body
           border 1px solid lighten($blue, 89%)
 
         a
-          display inline-block
           width 100%
+          display block
+
           p
             text-align center
             color $blue
