--- a/templates/mission.handlebars
+++ b/templates/mission.handlebars
@@ -1,7 +1,4 @@
-{{#each}}
-  <section class="banner mission">
-  </section>
-{{/each}}
+<section class="banner mission"></section>
 {{about-subheader}}
 <section class="page">
   <section class="excerpt">
