--- a/css/stylus/banner.styl
+++ b/css/stylus/banner.styl
@@ -3,18 +3,20 @@
     float left
     display inline-block
     width 100%
-    height 550px
     max-height 550px
     overflow hidden
 
+    &.team, &.mission
+        height 550px
+        background-size cover
+
+
     &.team
         background-image url("../img/map.jpg")
-        background-size cover
         background-position-x 50%
 
     &.mission
         background-image url("../img/banner-vanuatu.jpg")
-        background-size cover
         background-position-y 50%
 
     img
