--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -29,7 +29,7 @@
           <li>
             <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" classNames="subheaderLink" target="_blank">
               {{!-- <img src="img/3.png" alt="Community"> --}}
-              <p>Donate</p>
+              <p>Support us</p>
             </a>
           </a>
         </ul>
