--- a/templates/team.handlebars
+++ b/templates/team.handlebars
@@ -15,7 +15,7 @@
             {{/each}}
             <li class="volunteer">
               {{#link-to "volunteer"}}
-                <img src="img/2.png" alt="Become a volunteer today">
+                {{!-- <img src="img/2.png" alt="Become a volunteer today"> --}}
                 <p>Become a volunteer today</p>
               {{/link-to}}
             </li>
