removes console logging, fixes minor bugs

--- a/css/stylus/nav.styl
+++ b/css/stylus/nav.styl
@@ -51,17 +51,17 @@ nav
         color $blue !important
 
       &.donate
-        background $hover
         padding 0
 
         a
+          color $hover
           padding 18px 18px 19px 18px
-          color white
           display block
           font-weight 100
-          
+
           &:hover
-            background lighten($hover, 20%)
+            background $hover
+            color white
 
 .subheader
   ul
