--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -133,6 +133,8 @@ body
           display block
 
           p
+            margin 0
+            padding 20px
             text-align center
             color $blue
 
