--- a/templates/contact.handlebars
+++ b/templates/contact.handlebars
@@ -1,4 +1,3 @@
-
 {{get-involved-subheader}}
 <section class="page form">
   <form action="" class="contact-form">
@@ -10,6 +9,6 @@
     </ul>
     {{textarea title="Message"value=view.message placeholder="Message (optional)"}}
     <button class="submit" type="submit" {{action "submit" target=view}}>Send</button>
-    <p class="alt-email">Alternatively, you can always reach us at hello@wikitongues.org</p>
+    {{get-involved-email}}
   </form>
 </section>
