added fractured atlas footer credit, hooked message success

--- a/templates/application.handlebars
+++ b/templates/application.handlebars
@@ -25,10 +25,10 @@
 <footer>
   <div class="content-wrapper">
       <a href="index.html" class="copyright">
-          <p>© 2014 <img src="img/logos/horizontalLockupWhite.svg" class="icon" alt=""></p>
-          <p class="footerLink">Every language in the world
-          <br>All Rights Reserved</p>
+          <p><img src="img/logos/horizontalLockupWhite.svg" class="icon" alt=""></p>
+          <p class="footerLink">© 2014 Wikitongues, Inc., All Rights Reserved</p>
       </a>
+      <a href="https://www.fracturedatlas.org" class="copyright"><p class="footerLink">Fiscal Sponsorship by Fractured Atlas</p></a>
       <div class="links">
           <ul>
               <li class="header">Organization</li>
