--- a/templates/contact.handlebars
+++ b/templates/contact.handlebars
@@ -12,3 +12,11 @@
     {{get-involved-email}}
   </form>
 </section>
+{{!-- {{form-modal title=title text=text}} --}}
+<section class="success">
+    <div class="modal">
+      <h1>Thank you for your message!</h1>
+      <p>We're glad you reached out.</p>
+      <button {{action "closeModal"}}>Okay!</button>
+    </div>
+</section>
