--- a/templates/get_involved.handlebars
+++ b/templates/get_involved.handlebars
@@ -3,22 +3,13 @@
     <p>Wikitongues wouldn't be anywhere without our community of volunteers. If you believe in what we're doing, there's plenty of ways to get involved.</p>
     <ul class="activities">
       <li>
-        {{#link-to "submit" classNames="subheaderLink"}}
-          {{!-- <img src="img/1.png" alt="Submit a video"> --}}
-          <p>Submit a video</p>
-        {{/link-to}}
+        {{#link-to "submit" classNames="subheaderLink" tagName="button"}}Submit a video{{/link-to}}
       </li>
       <li>
-        {{#link-to "volunteer" classNames="subheaderLink"}}
-          {{!-- <img src="img/2.png" alt="Volunteer"> --}}
-          <p>Volunteer</p>
-        {{/link-to}}
+        {{#link-to "volunteer" classNames="subheaderLink" tagName="button"}}Volunteer{{/link-to}}
       </li>
       <li>
-        {{#link-to "contact" classNames="subheaderLink"}}
-          {{!-- <img src="img/3.png" alt="Contact"> --}}
-          <p>Contact</p>
-        {{/link-to}}
+        {{#link-to "contact" classNames="subheaderLink" tagName="button"}}Contact{{/link-to}}
       </li>
     </ul>
 </section>
