--- a/templates/submit.handlebars
+++ b/templates/submit.handlebars
@@ -38,3 +38,11 @@
     {{get-involved-email}}
   </form>
 </section>
+{{!-- {{form-modal title=title text=text}} --}}
+<section class="success">
+    <div class="modal">
+      <h1>Thank you for submitting a video!</h1>
+      <p>We'll be sure to notify you when it goes live.</p>
+      <button {{action "closeModal"}}>Okay!</button>
+    </div>
+</section>
