--- a/templates/volunteer.handlebars
+++ b/templates/volunteer.handlebars
@@ -25,3 +25,11 @@
     {{get-involved-email}}
   </form>
 </section>
+{{!-- {{form-modal title=title text=text}} --}}
+<section class="success">
+    <div class="modal">
+      <h1>Thank you for applying!</h1>
+      <p>We'll reach out to you as soon as possible.</p>
+      <button {{action "closeModal"}}>Okay!</button>
+    </div>
+</section>
