--- a/css/stylus/guidelines.styl
+++ b/css/stylus/guidelines.styl
@@ -5,12 +5,17 @@
     display inline-block
     font-size 67.5%
     background #eee !important
+    padding-bottom 4em
 
     button
       cursor pointer
+      background white
+      border none
 
       &:hover
+        border none
         color $hover
+        background white
 
     h1
       float left
@@ -18,8 +23,6 @@
     button
       float right
       width initial
-
-
 
   p, h4, li
     clear both
@@ -40,12 +43,13 @@
       display list-item
       margin 1em 0
       line-height 1.8em
-  
+
   td
     width 25%
     padding 20px 40px
-    border 1px solid
     text-align center
-    
+    background white
+    border none
+
     &.label
       font-weight 800
