--- a/css/stylus/page.styl
+++ b/css/stylus/page.styl
@@ -113,32 +113,22 @@ body
     margin 45px 0 0
 
     li
-        display inline-block
-        box-sizing border-box
-        width 32%
-        margin 0 .5%
-        float left
-        background #EFF5F9
-        border 1px solid #E5EFF6
+      display inline-block
+      width 32%
+      margin 0 .5%
+      float left
 
-        &:first-child
+      &:first-child
+        button
           margin-left 0
 
-        &:hover
-          background lighten($blue, 90%)
-          border 1px solid lighten($blue, 89%)
+      button, a
+        font-weight 100
+        font-size 1em
+        margin 0 .5%
+        width 100%
+        button()
 
-        a
-          width 100%
-          display block
-
-          p
-            margin 0
-            padding 20px
-            text-align center
-            color $blue
-
-        img
-            height 100%
-            width 100%
-            border-radius 100%
+      a
+        p
+          margin 0
