--- a/templates/application.handlebars
+++ b/templates/application.handlebars
@@ -24,37 +24,44 @@
 
 <footer>
   <div class="content-wrapper">
-      <a href="index.html" class="copyright">
-          <p><img src="img/logos/horizontalLockupWhite.svg" class="icon" alt=""></p>
-          <p class="footerLink">© 2014 Wikitongues, Inc., All Rights Reserved</p>
-      </a>
-      <a href="https://www.fracturedatlas.org" class="copyright"><p class="footerLink">Fiscal Sponsorship by Fractured Atlas</p></a>
-      <div class="links">
-          <ul>
-              <li class="header">Organization</li>
-              {{#link-to "mission" classNames="footerLink" tagName="li"}}About{{/link-to}}
-              {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
-              {{!-- {{#link-to "mission" classNames="footerLink" tagName="li"}}Mission{{/link-to}} --}}
-              {{!-- {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}} --}}
-              {{!-- {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}} --}}
-              {{!-- {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}} --}}
-              {{#link-to "legal" classNames="footerLink" tagName="li"}}Legal{{/link-to}}
-          </ul>
-          <ul>
-              <li class="header">Get involved</li>
-              {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit a video{{/link-to}}
-              {{#link-to "volunteer" classNames="footerLink" tagName="li"}}Volunteer{{/link-to}}
-              {{#link-to "contact" classNames="footerLink" tagName="li"}}Contact{{/link-to}}
-              {{!-- <li class="footerLink"><a target="_blank" href="https://docs.google.com/forms/d/1hVjiergDRQouyebGRn7gpGguKfKITTqJ9ar82DweRmo/viewform">Translate this page</a></li> --}}
-          </ul>
-          <ul>
-              <li class="header">Follow us</li>
-              <li class="footerLink"><a target="_blank" href="https://youtube.com/user/WikiTongues">Youtube</a></li>
-              <li class="footerLink"><a target="_blank" href="https://www.facebook.com/wikitongues">Facebook</a></li>
-              <li class="footerLink"><a target="_blank" href="https://twitter.com/wikitongues">Twitter</a></li>
-              <li class="footerLink"><a target="_blank" href="http://wikitongues.tumblr.com/">Tumblr</a></li>
-              <li class="footerLink"><a target="_blank" href="http://instagram.com/wikitongues">Instragram</a></li>
-          </ul>
-      </div>
+    <ul class="copyright">
+      <li>
+        <img src="img/logos/horizontalLockupWhite.svg" class="icon" alt="">
+      </li>
+      <li>
+        {{#link-to "index"classNames="footerLink"}}© 2014 Wikitongues, Inc., All Rights Reserved{{/link-to}}
+      </li>
+      <li>
+        <a href="https://www.fracturedatlas.org" class="footerLink" target="_blank">Fiscal Sponsorship by Fractured Atlas</a>
+      </li>
+    </ul>
+
+    <div class="links">
+        <ul>
+            <li class="header">Organization</li>
+            {{#link-to "mission" classNames="footerLink" tagName="li"}}About{{/link-to}}
+            {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
+            {{!-- {{#link-to "mission" classNames="footerLink" tagName="li"}}Mission{{/link-to}} --}}
+            {{!-- {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}} --}}
+            {{!-- {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}} --}}
+            {{!-- {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}} --}}
+            {{#link-to "legal" classNames="footerLink" tagName="li"}}Legal{{/link-to}}
+        </ul>
+        <ul>
+            <li class="header">Get involved</li>
+            {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit a video{{/link-to}}
+            {{#link-to "volunteer" classNames="footerLink" tagName="li"}}Volunteer{{/link-to}}
+            {{#link-to "contact" classNames="footerLink" tagName="li"}}Contact{{/link-to}}
+            {{!-- <li class="footerLink"><a target="_blank" href="https://docs.google.com/forms/d/1hVjiergDRQouyebGRn7gpGguKfKITTqJ9ar82DweRmo/viewform">Translate this page</a></li> --}}
+        </ul>
+        <ul>
+            <li class="header">Follow us</li>
+            <li class="footerLink"><a target="_blank" href="https://youtube.com/user/WikiTongues">Youtube</a></li>
+            <li class="footerLink"><a target="_blank" href="https://www.facebook.com/wikitongues">Facebook</a></li>
+            <li class="footerLink"><a target="_blank" href="https://twitter.com/wikitongues">Twitter</a></li>
+            <li class="footerLink"><a target="_blank" href="http://wikitongues.tumblr.com/">Tumblr</a></li>
+            <li class="footerLink"><a target="_blank" href="http://instagram.com/wikitongues">Instragram</a></li>
+        </ul>
+    </div>
   </div>
 </footer>
