--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -15,23 +15,14 @@
         <p>Wikitongues is a global effort to record and provide access to every language in the world. We’re a network of volunteers on every continent who work to bring you new language videos every week, driven by a commitment to the value of diversity. Be a part of our movement.</p>
         <ul class="activities">
           <li>
-            {{#link-to "submit" classNames="subheaderLink"}}
-              {{!-- <img src="img/1.png" alt="User submissions"> --}}
-              <p>Submit a video</p>
-            {{/link-to}}
+            {{#link-to "submit" tagName="button"}}Submit a video{{/link-to}}
           </li>
           <li>
-            {{#link-to "volunteer" classNames="subheaderLink"}}
-              {{!-- <img src="img/2.png" alt="Ambassadors"> --}}
-              <p>Become a volunteer</p>
-            {{/link-to}}
+            {{#link-to "volunteer" tagName="button"}}Become a volunteer{{/link-to}}
           </li>
           <li>
-            <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" classNames="subheaderLink" target="_blank">
-              {{!-- <img src="img/3.png" alt="Community"> --}}
-              <p>Support us</p>
-            </a>
-          </a>
+            <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" target="_blank">Support us</a>
+          </li>
         </ul>
         {{!-- <p>Join us in discovering every single language in the world!</p> --}}
     </div>
