--- a/css/stylus/team.styl
+++ b/css/stylus/team.styl
@@ -31,7 +31,12 @@
         font-size .9em
         font-family 'Open Sans', helvetica, sans-serif
         text-align:center
-        
+
         &.country
           font-size .8em
           color $secondary-blue
+
+  button
+    width 100%
+    font-size 1em
+    button()
