--- a/css/stylus/guidelines.styl
+++ b/css/stylus/guidelines.styl
@@ -7,22 +7,20 @@
     background #eee !important
     padding-bottom 4em
 
-    button
-      cursor pointer
-      background white
-      border none
-
-      &:hover
-        border none
-        color $hover
-        background white
-
     h1
       float left
 
     button
+      button()
+      background white
       float right
+      margin-top 0
       width initial
+      border none
+
+      &:hover
+        border none
+        background white
 
   p, h4, li
     clear both
