--- a/css/stylus/forms.styl
+++ b/css/stylus/forms.styl
@@ -133,3 +133,5 @@
       font-size 1.5em
       font-family 'Open Sans', sans-serif
       font-weight 700
+      outline none
+      cursor pointer
