photo credit for sarah

--- a/css/stylus/banner.styl
+++ b/css/stylus/banner.styl
@@ -41,3 +41,10 @@
     .map-canvas
         width 100%
         height 600px
+
+    .credit
+        opacity .4
+        color white
+        float right
+        padding 1em
+        margin-top 500px
