--- a/templates/mission.handlebars
+++ b/templates/mission.handlebars
@@ -1,4 +1,7 @@
-<section class="banner mission"></section>
+<section class="banner mission">
+  <p class="credit">Cristina Panicali</p>
+</section>
+
 {{about-subheader}}
 <section class="page">
   <section class="excerpt">
