adds get involved image, renames other banner images to camel case. makes all H1s sans-serif

--- a/css/stylus/about.styl
+++ b/css/stylus/about.styl
@@ -1,10 +1,11 @@
-.about
-    .logo
-        img
-            width 70%
-            margin auto
-            display block
-    p
-        &.caption
-            color $secondary-blue
-            text-align center
+.mission
+  p
+    a
+      padding 0.2em
+      background lighten($hover, 40%)
+      margin 0 -0.2em
+      border-radius $radius
+
+      &:hover
+        background $hover
+        color initial
