--- a/css/stylus/banner.styl
+++ b/css/stylus/banner.styl
@@ -6,7 +6,7 @@
     max-height 550px
     overflow hidden
 
-    &.team, &.mission
+    &.team, &.mission, &.getInvolved
         height 550px
         background-size cover
 
@@ -15,7 +15,11 @@
         background-position-x 50%
 
     &.mission
-        background-image url("../img/banner-vanuatu.jpg")
+        background-image url("../img/teamBanner.jpg")
+        background-position-y 50%
+
+    &.getInvolved
+        background-image url("../img/getInvolvedBanner.jpg")
         background-position-y 50%
 
     img
