--- a/css/stylus/team.styl
+++ b/css/stylus/team.styl
@@ -2,10 +2,7 @@
   display inline-block
 
   h1
-    text-align center
-    font-family 'Open Sans', helvetica, sans-serif
-    font-weight 400
-    text-transform uppercase
+    margin-top 0
 
   ul
     padding 0
