--- a/templates/get_involved.handlebars
+++ b/templates/get_involved.handlebars
@@ -1,3 +1,4 @@
+<section class="banner getInvolved"></section>
 <section class="page form">
     <h1>Get involved</h1>
     <p>Wikitongues wouldn't be anywhere without our community of volunteers. If you believe in what we're doing, there's plenty of ways to get involved.</p>
