--- a/templates/mission.handlebars
+++ b/templates/mission.handlebars
@@ -3,7 +3,7 @@
 </section>
 
 {{about-subheader}}
-<section class="page">
+<section class="page mission">
   <section class="excerpt">
     <p>We stand for the values of diversity and respect between all the peoples of Earth.</p>
     <p>We stand for the rights of individuals and their communities to live where they live and to be who they are, thinking, speaking and acting freely.</p>
