--- a/templates/application.handlebars
+++ b/templates/application.handlebars
@@ -9,6 +9,7 @@
     {{#link-to "mission" tagName="li"}}About{{/link-to}}
     {{!-- {{#link-to "expeditions" tagName="li"}}Expeditions{{/link-to}} --}}{{!-- Expeditions should live inside of Projects --}}
     {{!-- {{#link-to "projects" tagName="li"}}Projects{{/link-to}} --}}
+    {{#link-to "watch" tagName="li"}}Watch{{/link-to}}
     {{#link-to "get_involved" tagName="li"}}Get Involved{{/link-to}}
     <li class="donate">
       <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" target="_blank">Support Us</a>
