--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -1,13 +1,11 @@
-{{#each}}
-    <section class="banner">
-        <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
-    </section>
-{{/each}}
+<section class="banner">
+    <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
+</section>
 <section class="page index">
     <div class="information">
         <h1>Every language in the world</h1>
         <a class="youTubeLink" href="https://www.youtube.com/user/WikiTongues" target="_blank">
-            <img src="img/youTubeLink.png" alt="">
+            <img {{bind-attr src="youTubeLink"}}>
             <div class="triangle"></div>
             <p>Join us on YouTube</p>
         </a>
