--- a/templates/poly.handlebars
+++ b/templates/poly.handlebars
@@ -17,13 +17,14 @@
       <h1 class="target"><a href="#">{{targetName}}</a></h1>
     </nav>
     <section class="phrases">
-      {{!-- <p class="phrase-source"><a href="#">{{sourcePhrases}}</a></p> --}}
+
       <ul>
         <li>
-          <p class="phrase-source"><a href="#">Mba’éichapa.</a></p>
-          <p class="phrase-target"><a href="#">Hello</a></p>
+          {{!-- <p class="phrase-source"><a href="#">{{sourcePhrases}}</a></p> --}}
+          <p class="phrase-source"><a class="phrase" href="#">Mba’éichapa.</a></p>
+          <p class="phrase-target"><a class="phrase" href="#">Hello</a></p>
         </li>
-        <li>
+        {{!-- <li>
           <p class="phrase-source"><a href="#">Jajohecha peve.</a></p>
           <p class="phrase-target"><a href="#">Goodbye.</a></p>
         </li>
@@ -58,7 +59,7 @@
         <li>
           <p class="phrase-source"><a href="#">Aguyjevete ndéve.</a></p>
           <p class="phrase-target"><a href="#">Thank you very much.</a></p>
-        </li>
+        </li> --}}
       </ul>
       <button><a href="#">+</a></button>
     </section>
