--- a/templates/book.handlebars
+++ b/templates/book.handlebars
@@ -7,6 +7,7 @@
       <a href="#" title="Embed">{ }</a>{{!--Embed--}}
       <a href="#" title="Location">!</a>{{!--Location--}}
       <a href="#" title="Settings">#</a>{{!--Settings--}}
+      <p>{{phraseCount}}</p>
     </nav>
     <section class="banner">
       <img {{bind-attr src="bannerUrl" alt="User"}} class="fallback">
@@ -18,46 +19,14 @@
     </nav>
     <section class="phrases">
       <ul>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[0]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[0]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[1]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[1]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[2]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[2]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[3]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[3]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[4]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[4]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[5]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[5]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[6]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[6]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[7]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[7]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[8]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[8]}}</a></p>
-        </li>
-        <li>
-          <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrases.[9]}}</a></p>
-          <p class="phrase-target"><a class="phrase" href="#">{{targetPhrases.[9]}}</a></p>
-        </li>
+        {{#each phrases}}
+          <li>
+            <p class="phrase-source"><a class="phrase" href="#">{{sourcePhrase}}</a></p>
+            <p class="phrase-target"><a class="phrase" href="#">{{targetPhrase}}</a></p>
+          </li>
+          {{else}}
+          <p class="empty">Shoot! There is nothing here!</p>
+        {{/each}}
       </ul>
       <button><a href="#">+</a></button>
     </section>
